fix text label shift right away after page refreshing

--- a/components/bl-accordion-component/styles/index.less
+++ b/components/bl-accordion-component/styles/index.less
@@ -13,7 +13,9 @@
 
 @bl-customComponent-accordion-title-padding: 12px 16px 12px 10px;
 @bl-customComponent-accordion-title-width: 100%;
-@bl-customComponent-accordion-title-icon-fontSize: 26px;
+@bl-customComponent-accordion-title-icon-width: 1em;
+@bl-customComponent-accordion-title-icon-height: 1em;
+@bl-customComponent-accordion-title-icon-color: @bl-customComponent-accordion-textColor;
 @bl-customComponent-accordion-title-icon-transition: all 0.2s ease-in-out;
 @bl-customComponent-accordion-title-icon-transform: rotateZ(90deg);
 
@@ -56,8 +58,10 @@
       background: transparent;
       cursor: pointer;
 
-      i {
-        font-size: @bl-customComponent-accordion-title-icon-fontSize;
+      svg {
+        width: @bl-customComponent-accordion-title-icon-width;
+        height: @bl-customComponent-accordion-title-icon-height;
+        fill: @bl-customComponent-accordion-title-icon-color;
         transition: @bl-customComponent-accordion-title-icon-transition;
         user-select: none;
       }
@@ -80,7 +84,7 @@
       }
     }
 
-    &.active i {
+    &.active svg {
       transform: @bl-customComponent-accordion-title-icon-transform;
     }
   }
